--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: "LeagueSpartan";
+    src: url("/fonts/LeagueSpartan-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "LeagueSpartan";
+    src: url("/fonts/LeagueSpartan-Medium.ttf") format("truetype");
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "LeagueSpartan";
+    src: url("/fonts/LeagueSpartan-SemiBold.ttf") format("truetype");
+    font-weight: 600;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "LeagueSpartan";
+    src: url("/fonts/LeagueSpartan-Bold.ttf") format("truetype");
+    font-weight: 700;
+    font-style: normal;
+  }
+
+  body {
+    font-family: "LeagueSpartan", sans-serif;
+  }
+}
